--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -26,7 +26,8 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:applicationContext.xml,classpath:app-security.xml</param-value>
+		<param-value>classpath:applicationContext.xml,
+		    classpath:app-security.xml, classpath:tools-config.xml</param-value>
 	</context-param>
 
 	<filter>
