--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>shoppingcart</groupId>
 	<artifactId>shoppingcart</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>ShoppingcartExample</name>
 
@@ -11,6 +11,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.core.version>3.2.1.RELEASE</spring.core.version>
 		<spring.data.mongodb.version>1.0.0.RELEASE</spring.data.mongodb.version>
+		<spring-data-jpa.version>1.3.4.RELEASE</spring-data-jpa.version>
 
 		<cglib.version>2.2</cglib.version>
 		<aspectj.version>1.6.10</aspectj.version>
@@ -31,6 +32,20 @@
 		<maven.copy.plugin.version>0.2.3</maven.copy.plugin.version>
 		<maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
 		<maven.apt.plugin.version>1.0</maven.apt.plugin.version>
+		<!-- Hibernate / JPA -->
+		<hibernate.version>4.2.1.Final</hibernate.version>
+
+		<!-- Bean validation -->
+		<hibernate-validator.version>4.3.1.Final</hibernate-validator.version>
+
+		<!-- Dates -->
+		<jodatime-hibernate.version>1.3</jodatime-hibernate.version>
+		<jodatime-jsptags.version>1.1.1</jodatime-jsptags.version>
+		<jodatime.version>2.2</jodatime.version>
+		<jadira-usertype-core.version>3.1.0.CR8</jadira-usertype-core.version>
+
+		<mysql.version>5.1.22</mysql.version>
+
 	</properties>
 
 	<dependencies>
@@ -79,6 +94,15 @@
 			<version>${spring.core.version}</version>
 		</dependency>
 
+		
+		<!-- Spring Data -->
+		
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>${spring-data-jpa.version}</version>
+		</dependency>
+		
 		<!-- A seamless aspect-oriented extension to the Java programming language -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -279,7 +303,52 @@
 			<version>3.2.1.CI-SNAPSHOT</version>
 		</dependency>
 
+		<!-- For MySql only -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.version}</version>
+		</dependency>
+		<!-- HIBERNATE -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${hibernate-validator.version}</version>
+		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-ehcache</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
+		
+		<!-- Date and Time -->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>${jodatime.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time-hibernate</artifactId>
+			<version>${jodatime-hibernate.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time-jsptags</artifactId>
+			<version>${jodatime-jsptags.version}</version>
+		</dependency>
+		
 
 	</dependencies>
 	<repositories>
