--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.7</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.sun.xml.parsers</groupId>
 			<artifactId>jaxp-ri</artifactId>
