--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,9 @@
 
 		<org.apache.axis2.version>1.6.1</org.apache.axis2.version>
 
+		<cxf.version>2.3.9</cxf.version>
+
+
 	</properties>
 
 	<dependencies>
@@ -304,33 +307,52 @@
 		</dependency>
 
 		<!-- Axis2 -->
-
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2</artifactId>
 			<version>${org.apache.axis2.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.ws.xmlschema</groupId>
+					<artifactId>xmlschema</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-spring</artifactId>
 			<version>${org.apache.axis2.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.ws.xmlschema</groupId>
+					<artifactId>xmlschema</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-transport-http</artifactId>
 			<version>${org.apache.axis2.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.ws.xmlschema</groupId>
+					<artifactId>xmlschema</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-transport-local</artifactId>
 			<version>${org.apache.axis2.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.ws.xmlschema</groupId>
+					<artifactId>xmlschema</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.xmlbeans</groupId>
-			<artifactId>xmlbeans</artifactId>
-			<version>2.6.0</version>
-		</dependency>
+		
 
 		<!-- Spring Security -->
 		<dependency>
@@ -413,6 +435,31 @@
 			<artifactId>jersey-media-json-jackson</artifactId>
 			<version>2.5.1</version>
 		</dependency>
+
+		<!-- Apache CXF Libraries -->
+
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-frontend-jaxws</artifactId>
+			<version>${cxf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http</artifactId>
+			<version>${cxf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-bindings-soap</artifactId>
+			<version>${cxf.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http-jetty</artifactId>
+			<version>${cxf.version}</version>
+		</dependency>
+
 	</dependencies>
 	<repositories>
 		<!-- ... possibly other repository elements ... -->
