--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 
 		<mysql.version>5.1.22</mysql.version>
 
-		<org.apache.axis2.version>1.6.1</org.apache.axis2.version>
+		<org.apache.axis2.version>1.6.2</org.apache.axis2.version>
 
 		<cxf.version>2.3.9</cxf.version>
 
@@ -311,48 +311,34 @@
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2</artifactId>
 			<version>${org.apache.axis2.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.apache.ws.xmlschema</groupId>
-					<artifactId>xmlschema</artifactId>
-				</exclusion>
-			</exclusions>
+
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-spring</artifactId>
 			<version>${org.apache.axis2.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.apache.ws.xmlschema</groupId>
-					<artifactId>xmlschema</artifactId>
-				</exclusion>
-			</exclusions>
+
 		</dependency>
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-transport-http</artifactId>
 			<version>${org.apache.axis2.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.apache.ws.xmlschema</groupId>
-					<artifactId>xmlschema</artifactId>
-				</exclusion>
-			</exclusions>
+
 		</dependency>
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-transport-local</artifactId>
 			<version>${org.apache.axis2.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.apache.ws.xmlschema</groupId>
-					<artifactId>xmlschema</artifactId>
-				</exclusion>
-			</exclusions>
+
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-soapmonitor-servlet</artifactId>
+			<version>${org.apache.axis2.version}</version>
+		</dependency>
+
 
 		<!-- Spring Security -->
 		<dependency>
@@ -453,7 +439,7 @@
 			<artifactId>cxf-rt-bindings-soap</artifactId>
 			<version>${cxf.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-transports-http-jetty</artifactId>
