--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -83,4 +83,22 @@
 	    <url-pattern>/cxf/*</url-pattern>
 	 </servlet-mapping>
 	 
+	 <servlet>
+       <servlet-name>SOAPMonitorService</servlet-name>
+       <servlet-class>
+         org.apache.axis2.soapmonitor.servlet.SOAPMonitorService
+       </servlet-class>
+       <init-param>
+          <param-name>SOAPMonitorPort</param-name>
+          <param-value>5001</param-value>
+       </init-param>
+       <load-on-startup>1</load-on-startup>
+     </servlet>
+
+     <servlet-mapping>
+        <servlet-name>SOAPMonitorService</servlet-name>
+        <url-pattern>/axis/SOAPMonitor</url-pattern>
+     </servlet-mapping>
+	 
+	 
 </web-app>
